[package]
name = "magetex"
version = "0.1.0"
edition = "2021"
keywords = ["mutex","async","realtime"]
authors = ["Geehaich", "CendreQuasar540"]
readme = "readme.md"

[dev-dependencies]
futures = "0.3"
rand = "*"
futures-concurrency = "^7.2.1"
tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-test = { version = "*" }